<resources>
    <string name="app_name">엇챠플레이</string>
    <string name="string_home">홈</string>
    <string name="string_login">이메일로 회원가입</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_login_first">모든 작품 무제한 감상,\n무료체험 시작하기</string>
    <string name="string_login_second">PC, 태블릿,폰,\n맥,Google 캐스트,TV,\n어디서나 최고의 화질로.</string>
    <string name="string_login_third">4억개의\n평가 데이터 기반,\n세계 최고의 추천엔진</string>
    <string name="string_login_first_sub">무료 가입 후\n충분히 둘러보고 결정하세요</string>
    <string name="string_login_second_sub">누워서든 서서든 앉아서든,\n언제 어디서든</string>
    <string name="string_login_third_sub">취향에 안 맞는 작품에\n2시간을 낭비할 순 없으니까.</string>
    <string name="string_signin">가입</string>
    <string name="string_signin_text">왓챠 서비스 이용약관, 왓챠플레이 서비스 이용약관,\n개인정보 취급 방침에 동의합니다.</string>
    <string name="string_signin_name">홍길동</string>
    <string name="string_signin_email">이메일 (example@gmail.com)</string>
    <string name="string_signin_password">비밀번호 (6자 이상)</string>
    <string name="stirng_signin">회원가입</string>
    <string name="string_main_info1">무료 체험 시작하고</string>
    <string name="string_main_info2">모든 작품, 무제한으로 감상하세요.</string>
    <string name="string_login_goto_signin">이미 왓챠 회원이신가요?</string>
    <string name="string_main_mypage">마이페이지</string>
    <string name="string_main_logout">로그아웃</string>
    <string name="id">w3Sm4xnRiqhOIpNHgOY0</string>
    <string name="password">m4NT9Ij63u</string>
</resources>
