<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SignInActivity">

    <data>

        <import type="android.view.View"/>

        <variable
                name="sign"
                type="com.example.app_movie.SigninViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/signin_back">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.07"
                android:id="@+id/constraintLayout">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_signin"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textView3"/>

            <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.053"
                    app:layout_constraintVertical_bias="0.545"
                    android:onClick="@{(view)->sign.touch(view)}"/>
        </android.support.constraint.ConstraintLayout>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.07"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.037"
                android:background="@drawable/back_signin"
                android:hint="@string/string_signin_name"
                android:textSize="15sp"
                android:textColorHint="@color/signin_edit_text"
                android:padding="8dp"
                android:textColor="@color/signin_edit_text"
                android:id="@+id/edit_name"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.07"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_name"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintVertical_bias="0.0"
                android:hint="@string/string_signin_email"
                android:textColorHint="@color/signin_edit_text"
                android:padding="8dp"
                android:textSize="15sp"
                android:textColor="@color/signin_edit_text"
                android:background="@drawable/back_signin"
                android:id="@+id/edit_email"/>

        <EditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.07"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/back_signin"
                app:layout_constraintTop_toBottomOf="@+id/edit_email"
                tools:layout_editor_absoluteX="0dp"
                android:hint="@string/string_signin_password"
                android:textSize="15sp"
                android:textColorHint="@color/signin_edit_text"
                android:padding="8dp"
                app:layout_constraintVertical_bias="0.0"
                android:textColor="@color/signin_edit_text"
                android:id="@+id/edit_password"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_signin_text"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_password"
                app:layout_constraintVertical_bias="0.022"
                android:textColor="@color/signin_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="13sp"
                android:id="@+id/textView2"
                android:layout_marginStart="16dp"/>

        <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.022"
                android:buttonTint="@color/signin_edit_text"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.015"
                android:background="@drawable/back_signin_button"
                android:text="회원가입"
                android:textColor="@color/signin_edit_text"/>
    </android.support.constraint.ConstraintLayout>
</layout>